switch to AP