@@ -17,6 +17,8 @@ repositories {
 
 dependencies {
     implementation(project(":utils"))
+    implementation(project(":annotations"))
+    api project(":annotations")
     implementation 'com.impossibl.pgjdbc-ng:pgjdbc-ng:0.8.9'
     implementation 'com.zaxxer:HikariCP:5.1.0'
     implementation 'redis.clients:jedis:5.1.2'
@@ -35,48 +37,6 @@ dependencies {
     annotationProcessor project(':javac-plugin')
     testCompileOnly project(':javac-plugin')
     testAnnotationProcessor project(':javac-plugin')
-}
-
-tasks.named('compileJava').configure {
-    options.fork = true
-    options.forkOptions.jvmArgs += [
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
-    ]
-
-    options.compilerArgs += [
-            '-Xplugin:StaticDataJavacPlugin'
-    ]
-}
-
-tasks.named('compileTestJava').configure {
-    options.fork = true
-    options.forkOptions.jvmArgs += [
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
-            '--add-opens', 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-            '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
-    ]
-
-    options.compilerArgs += [
-            '-Xplugin:StaticDataJavacPlugin'
-    ]
 }
 
 
